@@ -527,6 +527,10 @@ Bug fixes
   in the superclass Searcher were not using it, leading to strange bugs.
   (Uwe Schindler, Robert Muir)
 
+* LUCENE-3197: Fix core merge policies to not over-merge during
+  background optimize when documents are still being deleted
+  concurrently with the optimize (Mike McCandless)
+
 API Changes
 
 * LUCENE-3208: Renamed protected IndexSearcher.createWeight() to expert
@@ -535,6 +539,11 @@ API Changes
   compatibility. Query.weight() was deprecated and simply delegates to
   IndexSearcher. Both deprecated methods will be removed in Lucene 4.0.
   (Uwe Schindler, Robert Muir, Yonik Seeley)
+
+* LUCENE-3197: MergePolicy.findMergesForOptimize now takes
+  Map<SegmentInfo,Boolean> instead of Set<SegmentInfo> as the second
+  argument, so the merge policy knows which segments were originally
+  present vs produced by an optimizing merge (Mike McCandless)
 
 New Features
 
